# apis-instance-sicprod-dev

./: pyproject.toml
.github/workflows/: createmodelspr.yml  deploy.yml
apis_ontology/: api.py  apps.py  filters.py  models.py  signals.py  start.sh  urls.py  views.py
apis_ontology/management/commands/: fixrelation.py  importplaces.py  importproperties.py  publishall.py
apis_ontology/migrations/: 0001_initial.py  0002_remove_person_class_affiliation.py  0003_auto_20221213_1631.py  0004_alter_court_alternative_label_alter_court_type_and_more.py
apis_ontology/settings/: autocomplete_settings.py  local_settings.py  server_settings.py
apis_ontology/templates/apis_bibsonomy/: reference_detail.html
apis_ontology/templates/apis_entities/: edit_generic.html
apis_ontology/templates/apis_entities/detail_views/: detail_generic.html  function_detail_generic.html  person_detail_generic.html  place_detail_generic.html
apis_ontology/templates/apis_relations/: references_button_generic_ajax_form.html
apis_ontology/templates/webpage/: base.html  index.html
data/: properties.json  wikidatardf.yaml
