[tool.poetry]
name = "apis-instance-sicprod-dev"
version = "0.1.0"
description = "APIS Instance SiCProD"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.1,<4.2"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", tag = "v0.6.2" }
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git", tag = "v1.0.1" }
apis-bibsonomy = { git = "https://github.com/acdh-oeaw/apis-bibsonomy.git", branch = "birger/fix-referenceonform-issues" }
apis-acdhch-default-settings = { git = "https://github.com/acdh-oeaw/apis-acdhch-default-settings.git", tag = "v0.1.11" }
django-matomo = "^0.1.6"
# workaround for https://github.com/acdh-oeaw/apis-bibsonomy/issues/38
jmespath = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
